# someip-rs

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  LICENSING.md  README.md
examples/: message_basics.rs  sd_client.rs  sd_server.rs  tcp_client.rs  tcp_server.rs  udp_client.rs  udp_server.rs
src/: codec.rs  codec_async.rs  error.rs  header.rs  lib.rs  message.rs  types.rs
src/connection/: config.rs  managed_tcp.rs  managed_tcp_async.rs  mod.rs  pool.rs  pool_async.rs  state.rs
src/sd/: client.rs  entry.rs  message.rs  mod.rs  option.rs  server.rs  types.rs
src/tp/: client.rs  header.rs  mod.rs  reassembly.rs  segment.rs  server.rs
src/transport/: mod.rs  tcp.rs  udp.rs
src/transport_async/: mod.rs  tcp.rs  udp.rs
